Fix login bug, plants component layout bug

--- a/src/app/panels/plants/plants.component.scss
+++ b/src/app/panels/plants/plants.component.scss
@@ -7,6 +7,6 @@
 	text-transform: capitalize;
 }
 
-.plant-details {
-	margin-bottom: 1em;
+.plant-detail {
+	display: inline-block;
 }
